--- a/src/app/servers/server-view/server-view.component.html
+++ b/src/app/servers/server-view/server-view.component.html
@@ -1,1 +1,20 @@
-<p>server-view works!</p>
+<div class="conatiner">
+  <div class="row">
+    <div class="col-xs-6">
+      <h2>Server Name</h2>
+      <p *ngFor="let server of servers">
+        <i
+          ><b>{{ server.name }} </b></i
+        >
+      </p>
+    </div>
+    <div class="col-xs-6">
+      <h3>Server Status</h3>
+      <p *ngFor="let server of servers">
+        <i
+          ><b>{{ server.status }} </b></i
+        >
+      </p>
+    </div>
+  </div>
+</div>
