add notes (132-136)Video

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           <a routerLink="/server"> Servers</a>
         </li>
         <li role="presentation" class="" routerLinkActive="active">
-          <a [routerLink]="['/user']">User</a>
+          <a [routerLink]="['/users']">User</a>
         </li>
       </ul>
     </div>
