--- a/src/app/users/view-users/view-users.component.html
+++ b/src/app/users/view-users/view-users.component.html
@@ -1,1 +1,3 @@
-<p>view-users works!</p>
+<p>Use wih {{ user.id }} load</p>
+<p>use name is {{ user.name }}</p>
+<a [routerLink]="['/user', 100, 'gautam']">press and then 10 gautam</a>
