--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,7 +2,12 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a href="#" class="list-group-item" *ngFor="let server of servers">
+      <a
+        [routerLink]="['/server', 5, 'edit']"
+        href="#"
+        class="list-group-item"
+        *ngFor="let server of servers"
+      >
         {{ server.name }}
       </a>
     </div>
