--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,1 +1,14 @@
-<p>users works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-4">
+      <div class="list-group">
+        <a href="#" class="list-group-item" *ngFor="let user of test">{{
+          user
+        }}</a>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <app-view-users></app-view-users>
+    </div>
+  </div>
+</div>
